README updates
