# pkg/api/models/data_v1_credential_type.go
@@ -1,0 +1,81 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// DataV1CredentialType data v1 credential type
+//
+// swagger:model data.v1.CredentialType
+type DataV1CredentialType string
+
+func NewDataV1CredentialType(value DataV1CredentialType) *DataV1CredentialType {
+	return &value
+}
+
+// Pointer returns a pointer to a freshly-allocated DataV1CredentialType.
+func (m DataV1CredentialType) Pointer() *DataV1CredentialType {
+	return &m
+}
+
+const (
+
+	// CredentialTypeWebauthnAuthenticator captures enum value "CREDENTIAL_TYPE_WEBAUTHN_AUTHENTICATOR"
+	CredentialTypeWebauthnAuthenticator DataV1CredentialType = "CREDENTIAL_TYPE_WEBAUTHN_AUTHENTICATOR"
+
+	// CredentialTypeAPIKeyP256 captures enum value "CREDENTIAL_TYPE_API_KEY_P256"
+	CredentialTypeAPIKeyP256 DataV1CredentialType = "CREDENTIAL_TYPE_API_KEY_P256"
+
+	// CredentialTypeRecoverUserKeyP256 captures enum value "CREDENTIAL_TYPE_RECOVER_USER_KEY_P256"
+	CredentialTypeRecoverUserKeyP256 DataV1CredentialType = "CREDENTIAL_TYPE_RECOVER_USER_KEY_P256"
+)
+
+// for schema
+var DataV1CredentialTypeEnum []DataV1CredentialType
+
+func init() {
+	var res []DataV1CredentialType
+	if err := json.Unmarshal([]byte(`["CREDENTIAL_TYPE_WEBAUTHN_AUTHENTICATOR","CREDENTIAL_TYPE_API_KEY_P256","CREDENTIAL_TYPE_RECOVER_USER_KEY_P256"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		DataV1CredentialTypeEnum = append(DataV1CredentialTypeEnum, v)
+	}
+}
+
+func (m DataV1CredentialType) validateDataV1CredentialTypeEnum(path, location string, value DataV1CredentialType) error {
+	if err := validate.EnumCase(path, location, value, DataV1CredentialTypeEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+// Validate validates this data v1 credential type
+func (m DataV1CredentialType) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// value enum
+	if err := m.validateDataV1CredentialTypeEnum("", "body", m); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this data v1 credential type based on context it is used
+func (m DataV1CredentialType) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
