# pkg/api/models/external_data_v1_credential_type.go
@@ -1,81 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-	"encoding/json"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/validate"
-)
-
-// ExternalDataV1CredentialType external data v1 credential type
-//
-// swagger:model external.data.v1.CredentialType
-type ExternalDataV1CredentialType string
-
-func NewExternalDataV1CredentialType(value ExternalDataV1CredentialType) *ExternalDataV1CredentialType {
-	return &value
-}
-
-// Pointer returns a pointer to a freshly-allocated ExternalDataV1CredentialType.
-func (m ExternalDataV1CredentialType) Pointer() *ExternalDataV1CredentialType {
-	return &m
-}
-
-const (
-
-	// CredentialTypeWebauthnAuthenticator captures enum value "CREDENTIAL_TYPE_WEBAUTHN_AUTHENTICATOR"
-	CredentialTypeWebauthnAuthenticator ExternalDataV1CredentialType = "CREDENTIAL_TYPE_WEBAUTHN_AUTHENTICATOR"
-
-	// CredentialTypeAPIKeyP256 captures enum value "CREDENTIAL_TYPE_API_KEY_P256"
-	CredentialTypeAPIKeyP256 ExternalDataV1CredentialType = "CREDENTIAL_TYPE_API_KEY_P256"
-
-	// CredentialTypeRecoverUserKeyP256 captures enum value "CREDENTIAL_TYPE_RECOVER_USER_KEY_P256"
-	CredentialTypeRecoverUserKeyP256 ExternalDataV1CredentialType = "CREDENTIAL_TYPE_RECOVER_USER_KEY_P256"
-)
-
-// for schema
-var ExternalDataV1CredentialTypeEnum []ExternalDataV1CredentialType
-
-func init() {
-	var res []ExternalDataV1CredentialType
-	if err := json.Unmarshal([]byte(`["CREDENTIAL_TYPE_WEBAUTHN_AUTHENTICATOR","CREDENTIAL_TYPE_API_KEY_P256","CREDENTIAL_TYPE_RECOVER_USER_KEY_P256"]`), &res); err != nil {
-		panic(err)
-	}
-	for _, v := range res {
-		ExternalDataV1CredentialTypeEnum = append(ExternalDataV1CredentialTypeEnum, v)
-	}
-}
-
-func (m ExternalDataV1CredentialType) validateExternalDataV1CredentialTypeEnum(path, location string, value ExternalDataV1CredentialType) error {
-	if err := validate.EnumCase(path, location, value, ExternalDataV1CredentialTypeEnum, true); err != nil {
-		return err
-	}
-	return nil
-}
-
-// Validate validates this external data v1 credential type
-func (m ExternalDataV1CredentialType) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	// value enum
-	if err := m.validateExternalDataV1CredentialTypeEnum("", "body", m); err != nil {
-		return err
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// ContextValidate validates this external data v1 credential type based on context it is used
-func (m ExternalDataV1CredentialType) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
